--- a/UnitTestingDemo/UnitTestingDemo/UnitTestingDemo.csproj
+++ b/UnitTestingDemo/UnitTestingDemo/UnitTestingDemo.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="morelinq" Version="3.1.0" />
   </ItemGroup>
 
 
