migrated to src and tests folders. upgraded to 3.1

--- a/tests/UnitTestingDemo.Tests/UnitTestingDemo.Tests.csproj
+++ b/tests/UnitTestingDemo.Tests/UnitTestingDemo.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnitTestingDemo.Services\UnitTestingDemo.Services.csproj" />
-    <ProjectReference Include="..\UnitTestingDemo\UnitTestingDemo.csproj" />
+    <ProjectReference Include="..\src\UnitTestingDemo.Services\UnitTestingDemo.Services.csproj" />
+    <ProjectReference Include="..\src\UnitTestingDemo\UnitTestingDemo.csproj" />
   </ItemGroup>
 </Project>
