--- a/tests/UnitTestingDemo.Services.Tests/UnitTestingDemo.Services.Tests.csproj
+++ b/tests/UnitTestingDemo.Services.Tests/UnitTestingDemo.Services.Tests.csproj
@@ -7,9 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFrameworkCoreMock.Moq" Version="1.0.0.30" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
@@ -17,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnitTestingDemo.Data\UnitTestingDemo.Data.csproj" />
+    <ProjectReference Include="..\src\UnitTestingDemo.Services\UnitTestingDemo.Services.csproj" />
   </ItemGroup>
 
 </Project>
