--- a/src/UnitTestingDemo.Data/UnitTestingDemo.Data.csproj
+++ b/src/UnitTestingDemo.Data/UnitTestingDemo.Data.csproj
@@ -21,5 +21,8 @@
   <ItemGroup>
     <ProjectReference Include="..\UnitTestingDemo.Domain\UnitTestingDemo.Domain.csproj" />
   </ItemGroup>
+  <PropertyGroup>
+      <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+  </PropertyGroup>    
 
 </Project>
