--- a/src/UnitTestingDemo.Services/UnitTestingDemo.Services.csproj
+++ b/src/UnitTestingDemo.Services/UnitTestingDemo.Services.csproj
@@ -8,5 +8,8 @@
     <ProjectReference Include="..\UnitTestingDemo.Domain\UnitTestingDemo.Domain.csproj" />
     <ProjectReference Include="..\UnitTestingDemo.Data\UnitTestingDemo.Data.csproj" />
   </ItemGroup>
+  <PropertyGroup>
+      <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+  </PropertyGroup>    
 
 </Project>
