--- a/tests/UnitTestingDemo.Data.Tests/UnitTestingDemo.Data.Tests.csproj
+++ b/tests/UnitTestingDemo.Data.Tests/UnitTestingDemo.Data.Tests.csproj
@@ -27,5 +27,8 @@
     <ProjectReference Include="..\..\src\UnitTestingDemo.Data\UnitTestingDemo.Data.csproj" />
     <ProjectReference Include="..\..\src\UnitTestingDemo.Domain\UnitTestingDemo.Domain.csproj" />
   </ItemGroup>
+  <PropertyGroup>
+      <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+  </PropertyGroup>    
 
 </Project>
