--- a/src/UnitTestingDemo.Domain/UnitTestingDemo.Domain.csproj
+++ b/src/UnitTestingDemo.Domain/UnitTestingDemo.Domain.csproj
@@ -3,5 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup>
+      <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+  </PropertyGroup>    
 
 </Project>
