--- a/tests/UnitTestingDemo.Tests/UnitTestingDemo.Tests.csproj
+++ b/tests/UnitTestingDemo.Tests/UnitTestingDemo.Tests.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\src\UnitTestingDemo.Data\UnitTestingDemo.Data.csproj" />
     <ProjectReference Include="..\..\src\UnitTestingDemo\UnitTestingDemo.csproj" />
   </ItemGroup>
+  <PropertyGroup>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+  </PropertyGroup>    
+
 </Project>
