try to fix restore

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
   inputs:
     command: restore
     projects: '**/*.csproj'
+    arguments: '--locked-mode'
     workingDirectory: $(Build.SourcesDirectory)
 
 - task: Cache@2
