--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,14 +24,6 @@ steps:
     arguments: '--locked-mode'
     workingDirectory: $(Build.SourcesDirectory)
 
-- task: Cache@2
-  inputs:
-    key: 'nuget | "$(Agent.OS)" | **/packages.lock.json,!**/bin/**'
-    restoreKeys: |
-        nuget | "$(Agent.OS)"
-    path: $(NUGET_PACKAGES)
-  displayName: Cache NuGet packages
-
 - task: DotNetCoreCLI@2
   displayName: Build
   inputs:
@@ -41,7 +33,7 @@ steps:
 
 # Run all tests with "/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura" to generate the code coverage file
 - task: DotNetCoreCLI@2
-  displayName: dotnet test
+  displayName: Test
   inputs:
     command: test
     arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
