--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,15 +48,16 @@ steps:
 #     reportgenerator -reports:$(Build.SourcesDirectory)/tests/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/CodeCoverage -reporttypes:Cobertura
 #   displayName: Create Code coverage report
 
-# Publish the code coverage result (summary and web site)
-# The summary allows to view the coverage percentage in the summary tab
-# The web site allows to view which lines are covered directly in Azure Pipeline
-- task: PublishCodeCoverageResults@1
-  displayName: 'Publish code coverage'
-  inputs:
-    codeCoverageTool: Cobertura
-    summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
-    pathToSources: '$(Build.SourcesDirectory)'
+# # Publish the code coverage result (summary and web site)
+# # The summary allows to view the coverage percentage in the summary tab
+# # The web site allows to view which lines are covered directly in Azure Pipeline
+# - task: PublishCodeCoverageResults@1
+#   displayName: 'Publish code coverage'
+#   inputs:
+#     codeCoverageTool: Cobertura
+#     summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
+#     reportDirectory: '$(Build.SourcesDirectory)/CodeCoverage'
+#     pathToSources: '$(Build.SourcesDirectory)'
 
 - task: PublishTestResults@2
   inputs:
