--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,42 +36,35 @@ steps:
   displayName: Test
   inputs:
     command: test
-    # arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
-    arguments: '--configuration $(BuildConfiguration)'
+    arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
     projects: '$(solution)'
     nobuild: true
   continueOnError: true
 
+# Generate the report using ReportGenerator (https://github.com/danielpalme/ReportGenerator)
+# First install the tool on the machine, then run it
+- script: |
+    dotnet tool install -g dotnet-reportgenerator-globaltool
+    reportgenerator -reports:$(Build.SourcesDirectory)/tests/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/CodeCoverage -reporttypes:Cobertura
+  displayName: Create Code coverage report
+
+# Publish the code coverage result (summary and web site)
+# The summary allows to view the coverage percentage in the summary tab
+# The web site allows to view which lines are covered directly in Azure Pipeline
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish code coverage'
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
+    reportDirectory: '$(Build.SourcesDirectory)/CodeCoverage'
+    pathToSources: '$(Build.SourcesDirectory)'
+
 - task: PublishTestResults@2
   inputs:
-    testResultsFormat: 'VSTest'
-    testResultsFiles: '**/TEST-*.xml'
+    testRunner: VSTest
+    testResultsFiles: '$(Agent.TempDirectory)/**/*.trx'
     mergeTestResults: true
     failTaskOnFailedTests: true
-# # Generate the report using ReportGenerator (https://github.com/danielpalme/ReportGenerator)
-# # First install the tool on the machine, then run it
-# - script: |
-#     dotnet tool install -g dotnet-reportgenerator-globaltool
-#     reportgenerator -reports:$(Build.SourcesDirectory)/tests/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/CodeCoverage -reporttypes:Cobertura
-#   displayName: Create Code coverage report
-
-# # Publish the code coverage result (summary and web site)
-# # The summary allows to view the coverage percentage in the summary tab
-# # The web site allows to view which lines are covered directly in Azure Pipeline
-# - task: PublishCodeCoverageResults@1
-#   displayName: 'Publish code coverage'
-#   inputs:
-#     codeCoverageTool: Cobertura
-#     summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
-#     reportDirectory: '$(Build.SourcesDirectory)/CodeCoverage'
-#     pathToSources: '$(Build.SourcesDirectory)'
-
-# - task: PublishTestResults@2
-#   inputs:
-#     testRunner: VSTest
-#     testResultsFiles: '$(Agent.TempDirectory)/**/*.trx'
-#     mergeTestResults: true
-#     failTaskOnFailedTests: true
     
 - task: DotNetCoreCLI@2
   inputs:
