Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,10 +61,16 @@ steps:
 
 - task: PublishTestResults@2
   inputs:
-    testRunner: VSTest
-    testResultsFiles: '$(Agent.TempDirectory)/**/*.trx'
+    testResultsFormat: 'VSTest'
+    testResultsFiles: '**/TEST-*.xml'
     mergeTestResults: true
     failTaskOnFailedTests: true
+# - task: PublishTestResults@2
+#   inputs:
+#     testRunner: VSTest
+#     testResultsFiles: '$(Agent.TempDirectory)/**/*.trx'
+#     mergeTestResults: true
+#     failTaskOnFailedTests: true
     
 - task: DotNetCoreCLI@2
   inputs:
