Added dotnet task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,9 @@ variables:
   NUGET_PACKAGES: $(Pipeline.Workspace)/.nuget/packages
   
 steps:
+- task: UseDotNet@2
+  inputs:
+    version: '3.1.x'
 - task: DotNetCoreCLI@2
   displayName: Restore nuget packages
   inputs:
